--- a/themes/default/partials/allrutas.htm
+++ b/themes/default/partials/allrutas.htm
@@ -35,8 +35,8 @@
               <img class="separator" src="{{preurl}}/storage/app/media/uploaded-files/templates/small-yellow-separator.svg">
               <div class="icons">
                 <div class="icon-pair">
-                  <img src="{{preurl}}/storage/app/media/uploaded-files/templates/{{str_slug(rutas[i].viewBag.category)}}.svg">
-                  <p class="icon-txt">{{rutas[i].viewBag.category}}</p>
+                  <img src="{{preurl}}/storage/app/media/uploaded-files/templates/{{str_slug(rutas[i].scatg)}}.svg">
+                  <p class="icon-txt">{{rutas[i].scatg}}</p>
                 </div>
                 <div class="icon-pair">
                   <img src="{{preurl}}/storage/app/media/uploaded-files/templates/loc-events.svg">
