--- a/themes/default/partials/rutas.htm
+++ b/themes/default/partials/rutas.htm
@@ -36,8 +36,8 @@
             <div class="icons">
               
               <div class="icon-pair">
-                <img src="{{preurl}}/storage/app/media/uploaded-files/templates/{{str_slug(ruta.viewBag.category)}}.svg">
-                  <p class="icon-txt">{{ruta.viewBag.category|_}}</p>
+                <img src="{{preurl}}/storage/app/media/uploaded-files/templates/{{str_slug(ruta.scatg)}}.svg">
+                  <p class="icon-txt">{{ruta.scatg}}</p>
               </div>
              
               <div class="icon-pair">
