--- a/themes/default/partials/site/headerevent.htm
+++ b/themes/default/partials/site/headerevent.htm
@@ -24,9 +24,9 @@
     
     <p class="feature-txt">{{event[0].date_start_pretty_num}} - {{event[0].date_end_pretty_num}}</p>
   </div>
-  <div class="feature"><img src="{{preurl}}/storage/app/media/uploaded-files/templates/{{str_slug(event[0].category)}}.svg" class="fr-fil fr-dib">
+  <div class="feature"><img src="{{preurl}}/storage/app/media/uploaded-files/templates/{{str_slug(scatg)}}.svg" class="fr-fil fr-dib">
 
-    <p class="feature-txt">{{event[0].category}}</p>
+    <p class="feature-txt">{{scatg}}</p>
   </div>
   <div class="feature"><img src="{{preurl}}/storage/app/media/uploaded-files/templates/location.svg" class="fr-fil fr-dib">
 
