--- a/themes/default/partials/site/headerruta.htm
+++ b/themes/default/partials/site/headerruta.htm
@@ -27,8 +27,8 @@
       <p class="feature-txt">{{ruta[0].days}} día</p>
     {%endif%}
   </div>
-  <div class="feature"><img src="{{preurl}}/storage/app/media/uploaded-files/templates/{{str_slug(ruta[0].category)}}.svg" class="fr-fil fr-dib">
-    <p class="feature-txt">{{ruta[0].category}}</p>
+  <div class="feature"><img src="{{preurl}}/storage/app/media/uploaded-files/templates/{{str_slug(scatg)}}.svg" class="fr-fil fr-dib">
+    <p class="feature-txt">{{scatg}}</p>
   </div>
   <div class="feature"><img src="{{preurl}}/storage/app/media/uploaded-files/templates/location.svg" class="fr-fil fr-dib">
     <p class="feature-txt">{{ruta[0].location}}</p><a class="feature-txt-mapa" href="{{ruta[0].locationgoogle}}" target="_blank">Ver mapa</a></div>
