--- a/modules/backend/layouts/default.htm
+++ b/modules/backend/layouts/default.htm
@@ -38,6 +38,10 @@
 
                         <!-- Content Body -->
                         <div class="layout-cell layout-container" id="layout-body">
+
+                            <div id="MModal" style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); z-index: 999; display: none;">                                
+                            </div>
+
                             <div class="layout-relative">
 
                                 <div class="layout">
