--- a/themes/default/layouts/experience.htm
+++ b/themes/default/layouts/experience.htm
@@ -79,6 +79,12 @@ code = "redes-sociales"
 
         $this['experience'] = $this->staticApp->experienceFindByUrl($this->page->url);
 
+        $intrs =  $this->staticApp->getInteresesById($this['experience'][0]['interest']);
+        $this['intrs1'] = $intrs[0];
+        $this['intrs2'] = $intrs[1];
+
+        $this['stvisit'] = $this->staticApp->getTvisitaById($this['experience'][0]['tvisit']);
+
     }
 
     function onMailExperience(){
