--- a/plugins/rainlab/pages/widgets/pagelist/partials/_treebranch.htm
+++ b/plugins/rainlab/pages/widgets/pagelist/partials/_treebranch.htm
@@ -49,14 +49,18 @@
             
             <?php if ($subtemplate == 'playas') { ?>
 
-                <a style = "border: solid 1px red; height: 15px; width: 15px;" class='duplicate' data-type='playa' data-request='onCopyPage' data-request-data="fileNamePost: '<?= e($fileName) ?>' , fileUrlPost: '<?= $pageObj->page->getViewBag()->property('url') ?>', fileTitlePost: '<?= $pageObj->page->getViewBag()->property('title') ?>'">
+                <a  class='duplicate' data-type='playa' data-request='onCopyPage' data-request-data="fileNamePost: '<?= e($fileName) ?>' , fileUrlPost: '<?= $pageObj->page->getViewBag()->property('url') ?>', fileTitlePost: '<?= $pageObj->page->getViewBag()->property('title') ?>'">
                  
                  <!-- Andrés Martínez : Con tooltip no funciona abrir el li ni mostrar la modal, es decir otras acciones de js
-                    <img data-toggle="tooltip"-->
-                  <img
-                  data-placement="bottom"
+                    <img data-toggle="tooltip                 
+                   data-placement="bottom"
                   data-delay="200"
                   title="Duplicar playa" src="/storage/app/media/uploaded-files/templates/duplicate.svg">
+
+                   -->
+
+
+                       <img src="/storage/app/media/uploaded-files/templates/duplicate.svg">
                 </a>                    
             <?php } ?>
 
