--- a/plugins/rainlab/pages/widgets/pagelist/partials/_treebranch.htm
+++ b/plugins/rainlab/pages/widgets/pagelist/partials/_treebranch.htm
@@ -60,7 +60,7 @@
                    -->
 
 
-                       <img src="/storage/app/media/uploaded-files/templates/duplicate.svg">
+                       <img class='duplicate' src="/storage/app/media/uploaded-files/templates/duplicate.svg">
                 </a>                    
             <?php } ?>
 
