--- a/plugins/rainlab/pages/widgets/pagelist/partials/_treebranch.htm
+++ b/plugins/rainlab/pages/widgets/pagelist/partials/_treebranch.htm
@@ -49,7 +49,7 @@
             
             <?php if ($subtemplate == 'playas') { ?>
 
-                <a  class='duplicate' data-type='playa' data-request='onCopyPage' data-request-data="fileNamePost: '<?= e($fileName) ?>' , fileUrlPost: '<?= $pageObj->page->getViewBag()->property('url') ?>', fileTitlePost: '<?= $pageObj->page->getViewBag()->property('title') ?>'">
+                <a  class='duplicate' data-type='playa' data-request='onCopyPage' data-request-data="fileType: 'playa', fileNamePost: '<?= e($fileName) ?>' , fileUrlPost: '<?= $pageObj->page->getViewBag()->property('url') ?>', fileTitlePost: '<?= $pageObj->page->getViewBag()->property('title') ?>'">
                  
                 
                     <img data-toggle="tooltip                 
@@ -63,7 +63,7 @@
 
             <?php if ($subtemplate == 'municipios') { ?>
 
-                <a  class='duplicate' data-type='muicipio' data-request='onCopyPage' data-request-data="fileNamePost: '<?= e($fileName) ?>' , fileUrlPost: '<?= $pageObj->page->getViewBag()->property('url') ?>', fileTitlePost: '<?= $pageObj->page->getViewBag()->property('title') ?>'">
+                <a  class='duplicate' data-type='municipio' data-request='onCopyPage' data-request-data="fileType: 'municipio', fileNamePost: '<?= e($fileName) ?>' , fileUrlPost: '<?= $pageObj->page->getViewBag()->property('url') ?>', fileTitlePost: '<?= $pageObj->page->getViewBag()->property('title') ?>'">
                  
                 
                     <img data-toggle="tooltip                 
