--- a/plugins/rainlab/pages/widgets/experiencelist/partials/_treebranch.htm
+++ b/plugins/rainlab/pages/widgets/experiencelist/partials/_treebranch.htm
@@ -62,7 +62,7 @@
               <img data-toggle="tooltip"
               data-placement="bottom"
               data-delay="200"
-              title="Duplicar evento" src="/storage/app/media/uploaded-files/templates/duplicate.svg">
+              title="Duplicar experiencia" src="/storage/app/media/uploaded-files/templates/duplicate.svg">
         </a>
         <ol>
             <?php if ($subpages = $pageObj->subpages): ?>
