--- a/plugins/rainlab/pages/widgets/rutalist/partials/_treebranch.htm
+++ b/plugins/rainlab/pages/widgets/rutalist/partials/_treebranch.htm
@@ -36,6 +36,12 @@
                 <label for="<?= $cbId ?>"></label>
             </div>
         </div>
+         <a class='duplicate' data-type='ruta' data-request='onCopyRuta' data-request-data="fileNamePost: '<?= e($fileName) ?>' , fileUrlPost: '<?= $pageObj->page->getViewBag()->property('url') ?>', fileTitlePost: '<?= $pageObj->page->getViewBag()->property('title') ?>'">
+          <img data-toggle="tooltip"
+          data-placement="bottom"
+          data-delay="200"
+          title="Duplicar ruta" src="/storage/app/media/uploaded-files/templates/duplicate.svg">
+        </a>
         <ol>
             <?php if ($subpages = $pageObj->subpages): ?>
                 <?= $this->makePartial('treebranch', ['items' => $subpages]) ?>
