--- a/plugins/rainlab/pages/assets/css/style-search.css
+++ b/plugins/rainlab/pages/assets/css/style-search.css
@@ -88,7 +88,9 @@ form, .inputs-container {
   color: #4A4A4A !important;
   font-size: 15.72px;
   line-height: 22px !important;
-  padding-top: 21px; }
+  padding-top: 21px;
+  padding-right: 33px !important;
+}
 
 .days-container {
   background-image: url("../svg/calendar.svg");
