el botón de "Empresas" se pulsa también cuando seleccionas

--- a/modules/backend/layouts/_mainmenu.htm
+++ b/modules/backend/layouts/_mainmenu.htm
@@ -80,7 +80,7 @@
                                 </li>
                             <?php } ?>
 
-                            <li class="<?= $isActive ? 'active' : null ?> svg-icon-container svg-active-effects">
+                            <li class="svg-icon-container svg-active-effects">
                                 <a href="/backend/backend/empresa">
                                     <span class="nav-icon">
                                         <?php if ($item->iconSvg): ?>
