--- a/modules/backend/layouts/_mainmenu.htm
+++ b/modules/backend/layouts/_mainmenu.htm
@@ -63,7 +63,7 @@
                         <?php if( trim(trans($item->label)) == 'Media' ){ ?>
                             
                             <?php if( $this->user->is_superuser == 1 ){ ?>
-                                <li class="<?= $isActive ? 'active' : null ?> svg-icon-container svg-active-effects">
+                                <li class="svg-icon-container svg-active-effects">
                                     <a href="/backend/backend/intereses">
                                         <span class="nav-icon">
                                             <?php if ($item->iconSvg): ?>
