--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -30,7 +30,7 @@
 @font-face {
   font-family: 'AvenirNext-DemiBold';
   src: url("../fonts/avenirnext/AvenirNext-DemiBold.eot");
-  src: url("../fonts/avenirnext/AvenirNext-DemiBold.eot?#iefix") format("embedded-opentype"), url("../fonts/avenirnext/AvenirNext-DemiBold.woff") format("woff"), url("../fonts/avenirnext/AvenirNext-DemiBold.ttf") format("truetype");
+  src: url("../fonts/avenirnext/AvenirNext-DemiBold.eot?#iefix") format("embedded-opentype"), url("../fonts/avenirnext/AvenirNext-DemiBold.woff2") format("woff2"), url("../fonts/avenirnext/AvenirNext-DemiBold.woff") format("woff"), url("../fonts/avenirnext/AvenirNext-DemiBold.ttf") format("truetype"), url("../fonts/avenirnext/AvenirNext-DemiBold.svg#AvenirNext-DemiBold") format("svg");
   font-weight: normal;
   font-style: normal; }
 
