--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -284,7 +284,7 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: 'AvenirNext-Medium', sans-serif; }
+  font-family: 'Avenir-Medium', sans-serif; }
   html ::selection, body ::selection {
     background-color: #FFE8CA; }
 
