--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -379,7 +379,7 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: 'AvenirNext-Medium', sans-serif;
+  font-family: 'Avenir-Medium', sans-serif;
   ::selection {
     background-color: #FFE8CA;
   }
