--- a/plugins/rainlab/pages/assets/scss/style-village.scss
+++ b/plugins/rainlab/pages/assets/scss/style-village.scss
@@ -584,7 +584,7 @@ transform: $value;
               font-size: 16px;
               line-height: 22px;
               margin-left: 11px;
-              font-family: 'AvenirNext-Medium' !important;
+              font-family: 'Avenir-Medium' !important;
             }
             &:first-child {
               margin-right: 30px;
