--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -1793,7 +1793,7 @@ html, body {
     font-weight: 700;
     font-size: 15px;
     line-height: 27px;
-    font-family: 'AvenirNext-Medium';
+    font-family: 'Avenir-Medium';
     img {
       margin-left: 8px;
     }
@@ -1811,7 +1811,7 @@ html, body {
     font-weight: 700;
     font-size: 15px;
     line-height: 27px;
-    font-family: 'AvenirNext-Medium';
+    font-family: 'Avenir-Medium';
     img {
       margin-left: 8px;
     }
@@ -4221,7 +4221,7 @@ footer {
 
 .bussinesPage {
   .whatDoYouNeedCadiz {
-    font-family: AvenirNext-Medium;
+    font-family: 'Avenir-Medium';
     font-size: 23px;
     color: #FFFFFF;
     line-height: 33px;
@@ -4340,7 +4340,7 @@ footer {
         max-width: 237px;
         margin: 0 auto;
         a {
-          font-family: AvenirNext-Medium;
+          font-family: 'Avenir-Medium';
           font-size: 16px;
           color: #9B9B9B;
           line-height: 33px;
