--- a/modules/backend/layouts/default.htm
+++ b/modules/backend/layouts/default.htm
@@ -40,6 +40,7 @@
                         <div class="layout-cell layout-container" id="layout-body">
 
                             <div id="MModal" style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); z-index: 999; display: none;">                                
+                                <img src="/modules/backend/assets/images/dualring.svg" alt="">
                             </div>
 
                             <div class="layout-relative">
